<resources>
    <string name="app_name">便捷语聊</string>
    <string name="hello_world">Hello World!</string>
    <string name="play">播放</string>
    <string name="clear">删除</string>
    <string name="copy">复制</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="add_phrase">添加词组</string>
    <string name="edit_phrase">编辑词组</string>
    <string name="enter_phrase">请输入词组</string>
    <string name="phrase_cannot_be_empty">词组不能为空</string>
    <string name="category_clothing_food_housing_transport">人称</string>
    <string name="category_relationships">判断</string>
    <string name="category_actions">方位</string>
    <string name="category_emotions">动作</string>
    <string name="category_requests">状态</string>
    <string name="category_other">数字</string>
    <string name="category_time">时间</string>
    <string name="category_noun">名词</string>
    <string name="phrase_i">我</string>
    <string name="phrase_want">想要</string>
    <string name="phrase_eat">吃</string>
    <string name="phrase_drink">喝</string>
    <string name="phrase_sleep">睡觉</string>
    <string name="phrase_go">去</string>
    <string name="phrase_home">家</string>
    <string name="phrase_hospital">医院</string>
    <string name="phrase_restaurant">餐厅</string>
    <string name="phrase_need">需要</string>
    <string name="phrase_help">帮助</string>
    <string name="phrase_thank_you">谢谢</string>
    <string name="phrase_sorry">对不起</string>
    <string name="phrase_happy">开心</string>
    <string name="phrase_sad">难过</string>
    <string name="phrase_hungry">饿了</string>
    <string name="phrase_thirsty">渴了</string>
    <string name="phrase_tired">累了</string>
    <string name="phrase_mother">妈妈</string>
    <string name="phrase_father">爸爸</string>
    <string name="phrase_doctor">医生</string>
    <string name="phrase_nurse">护士</string>
    <string name="phrase_friend">朋友</string>
    <string name="phrase_walk">走路</string>
    <string name="phrase_sit">坐下</string>
    <string name="phrase_stand">站起来</string>
    <string name="phrase_lie_down">躺下</string>
    <string name="phrase_read">阅读</string>
    <string name="phrase_write">写</string>
    <string name="phrase_watch_tv">看电视</string>
    <string name="phrase_listen_to_music">听音乐</string>
</resources>